# cities-loader

./: .env  .gitignore  Cargo.toml
migrations/202210221357_cities/: down.sql  up.sql
src/: main.rs
